--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
-body {
-  margin: 0;
-}
+@import url('https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&family=Arimo&family=Atma&family=Galada&family=Mina&family=Tiro+Bangla&display=swap');
+
+/* font-family: 'Akaya Kanadaka', cursive;
+font-family: 'Arimo', sans-serif;
+font-family: 'Atma', cursive;
+font-family: 'Galada', cursive;
+font-family: 'Mina', sans-serif;
+font-family: 'Tiro Bangla', serif; */
+
