--- a/src/components/layout/nav/nav.css
+++ b/src/components/layout/nav/nav.css
@@ -8,6 +8,9 @@ nav {
     align-items: center;
     justify-content: center;
 }
+.menu-icon{
+    display: none;
+}
 .nav-links{
     display: flex;
     margin: 0;padding: 0;
@@ -17,10 +20,49 @@ nav {
 
 }
 .nav-links>li>a{
-    text-decoration: none;
+text-decoration: none;
 background-color: #0000009d;
 padding: 10px 20px;
-color: cyan;
+display: block;
+text-align: center;
+color: rgba(222, 249, 250, 0.932);
+font-family: Arimo;
+font-size: calc(12px + 2 * ((100vw - 20px) / 600));
+
+}
+.nav-links>li>a:hover{
+    background-color: rgba(0, 255, 13, 0.5);
+    outline: 1px dashed ghostwhite;
+
 }
 
+@media screen and (max-width:636px) {
+    #nav-menu {
+        display: none;
+    }
+    .menu-icon{
+        position: fixed;
+        cursor: pointer;
+        top: 7px;
+        right: 5px;
+        display: block;
+    }
+    .menu-icon>li{
+        list-style: none;
+        line-height:0 ;
+        width: 25px;
+        margin: 7px;
+        height: 2px;
+        background-color: aliceblue;
+
+    }
+    .nav-links{
+        position: fixed;
+        top: 43px;
+        right: 13px;
+        flex-direction: column;
+    }
+
+    
+}
 
