--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -1,12 +1,49 @@
-main {
-    background-color: #8988425e;
-    width: 51vw;
-    margin-top: 10px;
-    padding-top: 7px;
-    padding-right: 7px;
-    padding-bottom: 7px;
-    padding-left: 34px;
+main{
+    display: flex;
+    justify-content: center;
+}
+
+main>article {
+    display: flex;
+    justify-content: center;
+    background-color: #f0badb93;
+    width: 67vw;
     min-height: 360px;
+    margin-bottom: 5vh;
+    border-radius: 11px;
+}
+article>pre{
+    color: rgb(83, 7, 99);
+font-weight: bold;
+}
+article>pre>p{
+    font-size: large;
+    padding-left: 3vw;
+    font-family: Atma;
+    text-shadow: 0px 0px 2px rgba(248, 99, 198, 0.781);
+}
+article>pre>p>section{
+margin-bottom: 19px;
+line-height: 27px;
+}
+article>pre>header{
+    font-family: Galada;
+    text-shadow: 1px 0px 3px white;
+    color: rgb(25, 0, 255);
+}
+footer>address>.author{
+    font-size: x-large;
+    font-weight: bolder;
+    color: rgb(42, 255, 70);
+    text-shadow: 2px 1px 7px blue;
+    word-spacing: -7px;
+}
+footer>address>time{
+    font-style: normal;
+    word-spacing: -5px;
+    font-weight: bolder;
+    text-shadow: 1px 0px rgb(255, 0, 0);
+
 }
 
 
@@ -15,6 +52,12 @@ main {
         width: 100%;
         margin: 0;
         padding: 0;
+    }
+    main>article {
+        width: 95%;
+    }
+    article>pre{
+        margin-left: 2vw;
     }
 
 }
