--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -6,7 +6,7 @@ main{
 main>article {
     display: flex;
     justify-content: center;
-    background-color: #f0badb93;
+    background-color: #e9bbd7b3;
     width: 67vw;
     min-height: 360px;
     margin-bottom: 5vh;
@@ -31,6 +31,13 @@ article>pre>header{
     text-shadow: 1px 0px 3px white;
     color: rgb(25, 0, 255);
 }
+footer>address{
+    display: flex;align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+
 footer>address>.author{
     font-size: x-large;
     font-weight: bolder;
@@ -42,6 +49,7 @@ footer>address>time{
     font-style: normal;
     word-spacing: -5px;
     font-weight: bolder;
+    padding-left: 3vw;
     text-shadow: 1px 0px rgb(255, 0, 0);
 
 }
