Some Minor Change.

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@ body {
   min-height: 100vh;
   margin: 0;
   margin: 0;
-  background-image: url("https://scontent.fdac5-2.fna.fbcdn.net/v/t39.30808-6/344255665_161093789955350_3461808422631041725_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=e3f864&_nc_ohc=4WlNVGW8gfYAX9UCCju&_nc_ht=scontent.fdac5-2.fna&oh=00_AfDm7LAyXkMVGV5XewkgFeUeZqFa0D0AOts3a_aujOMy9g&oe=64781418");
+  background-image: url("cover.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
