--- a/src/components/layout/nav/nav.css
+++ b/src/components/layout/nav/nav.css
@@ -1,4 +1,5 @@
 nav {
+    z-index: 1;
     width: 100%;
     min-height: 49px;
     position: sticky;
@@ -15,6 +16,7 @@ nav {
 
 .nav-links {
     display: flex;
+    box-shadow: 0px 0px 20px 0px aqua;
     margin: 0;
     padding: 0;
 }
@@ -52,9 +54,14 @@ nav {
         cursor: pointer;
         top: 7px;
         right: 5px;
-        display: block;
+        display: block;        
+        box-shadow: 0px 0px 1px rgb(47, 192, 47);
+        
     }
-
+    .menu-icon>ul{
+        margin: 0;
+        padding:0;
+    }
     .menu-icon>ul>li {
         list-style: none;
         line-height: 0;
@@ -67,7 +74,7 @@ nav {
 
     .nav-links {
         position: fixed;
-        top: 43px;
+        top: 53px;
         right: 13px;
         flex-direction: column;
     }
