--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -52,6 +52,7 @@ footer>address {
     align-items: center;
     flex-wrap: wrap;
     justify-content: space-around;
+    padding-bottom: 2vh;
 }
 
 
