--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -19,7 +19,7 @@ main>article {
 }
 
 article>pre {
-    color: #23012a;
+    color: #2d14ab;
     background-color: #e672ff26;
     font-weight: 700;
     border-radius: inherit;
