--- a/public/404.css
+++ b/public/404.css
@@ -3,14 +3,17 @@ body {
     margin: 0;
     padding: 0;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     height: 100vh;
     background-image: url(bg-desk.jpg);
     background-size: cover;
     background-attachment: fixed;
+    gap: 17px;
 }
-main{
+
+main {
     padding: 1vw;
     display: flex;
     flex-direction: column;
@@ -20,8 +23,34 @@ main{
     box-shadow: 0px 0px 20px 0px #6b1e9b;
     border-radius: 13px;
 }
-details>p{
+
+main>pre {
+    line-height: 1.7;
+}
+
+details>p {
     color: rgb(137, 255, 3);
+}
+
+nav>a {
+    text-decoration: none;
+    padding: 10px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: bolder;
+    font-size: large;
+    background-color: aliceblue;
+    color: blue;
+    text-shadow: 0px 0px 5px deeppink;
+    border-radius: 29px;
+
+    box-shadow: 0px 0px 11px blue;
+    border: 2px solid rgba(243, 6, 192, 0.171);
+}
+
+nav>a:hover {
+
+    background-color: #0c08d8a8;
+    color: white;
 }
 
 /* TABLATE DESIGN */
